--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>IAFE Contest</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,7 +50,9 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>We're sorry, but something went wrong (500 Error).</h1>
+    
+    <p>Please contact <a href="contact/">the IAFE staff</a> if you are having trouble making a submission. If you are trying to submit a photo or document for your entry, try uploading the photo or document again after five minutes if the processing server was temporarily down.</p>
   </div>
 </body>
 </html>
